ref: Refactoring after merge conflict