@@ -1,20 +1,13 @@
-<<<<<<<< HEAD:src/test/java/ua/duikt/learning/java/pro/spring/sprint02/service/IssueServiceTest.java
-package ua.duikt.learning.java.pro.spring.sprint02.service;
-========
 package ua.duikt.learning.java.pro.spring.sprint03.service;
->>>>>>>> refs/heads/task-sprint-3:src/test/java/ua/duikt/learning/java/pro/spring/sprint03/service/IssueServiceTest.java
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import ua.duikt.learning.java.pro.spring.entity.Issue;
 import ua.duikt.learning.java.pro.spring.entity.IssueHistory;
-import ua.duikt.learning.java.pro.spring.entity.Status;
 import ua.duikt.learning.java.pro.spring.entity.enums.IssueType;
 import ua.duikt.learning.java.pro.spring.entity.enums.Priority;
-import ua.duikt.learning.java.pro.spring.entity.enums.StatusCategory;
 import ua.duikt.learning.java.pro.spring.service.IssueService;
-import ua.duikt.learning.java.pro.spring.service.StatusService;
 import ua.duikt.learning.java.pro.spring.service.impl.IssueServiceImpl;
 
 import java.util.List;
@@ -35,39 +28,6 @@ class IssueServiceTest {
     }
 
     @Test
-<<<<<<<< HEAD:src/test/java/ua/duikt/learning/java/pro/spring/sprint02/service/IssueServiceTest.java
-    @DisplayName("Status Management")
-    void statusManagement() {
-        issueService.createStatus(1, "To Do", StatusCategory.TO_DO);
-        issueService.createStatus(1, "In Progress", StatusCategory.IN_PROGRESS);
-
-        List<Status> statuses = issueService.getStatuses(1);
-        assertThat(statuses).hasSize(2);
-        assertThat(statuses.get(0).getName()).isEqualTo("To Do");
-    }
-
-    @Test
-    @DisplayName("Status Lifecycle: Create, Update, Delete")
-    void statusLifecycle() {
-        Integer sId = issueService.createStatus(1, "To Do", StatusCategory.TO_DO);
-
-        List<Status> statuses = issueService.getStatuses(1);
-        assertThat(statuses).hasSize(1);
-        assertThat(statuses.get(0).getName()).isEqualTo("To Do");
-
-        issueService.updateStatus(sId, "To Do Updated");
-
-        Status updatedStatus = issueService.getStatuses(1).get(0);
-        assertThat(updatedStatus.getName()).isEqualTo("To Do Updated");
-
-        boolean deleted = issueService.deleteStatus(sId);
-        assertThat(deleted).isTrue();
-        assertThat(issueService.getStatuses(1)).isEmpty();
-    }
-
-    @Test
-========
->>>>>>>> refs/heads/task-sprint-3:src/test/java/ua/duikt/learning/java/pro/spring/sprint03/service/IssueServiceTest.java
     @DisplayName("Issue CRUD: Create, Get, Update, Delete")
     void issueCrud() {
         Integer issueId = issueService.createIssue(1, "Login Bug", "Fix it", IssueType.BUG, Priority.HIGH);
@@ -115,9 +75,9 @@ class IssueServiceTest {
 
         List<IssueHistory> history = issueService.getHistory(issueId);
 
-        assertThat(history.size()).isGreaterThanOrEqualTo(1);
+        assertThat(history).hasSizeGreaterThanOrEqualTo(1);
 
-        IssueHistory lastChange = history.get(history.size() - 1);
+        IssueHistory lastChange = history.getLast();
         assertThat(lastChange.getFieldChanged()).isEqualTo("status");
         assertThat(lastChange.getNewValue()).isEqualTo(String.valueOf(statusId));
     }
@@ -131,10 +91,5 @@ class IssueServiceTest {
         issueService.patchAssignee(issueId, assigneeId);
 
         assertThat(issueService.getIssue(issueId).getAssigneeId()).isEqualTo(assigneeId);
-
-        List<IssueHistory> history = issueService.getHistory(issueId);
-        boolean hasAssigneeRecord = history.stream()
-                .anyMatch(h -> "assignee".equals(h.getFieldChanged()) && String.valueOf(assigneeId).equals(h.getNewValue()));
-
     }
 }
